# ChangeLog for dev-util/git
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.251 2008/01/14 20:15:33 dertobi123 Exp $

  14 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  git-1.5.3.7-r1.ebuild:
  ppc. stable

*git-1.5.4_rc3 (14 Jan 2008)

  14 Jan 2008; Robin H. Johnson <robbat2@gentoo.org> +git-1.5.4_rc3.ebuild:
  Bump the release candidate for more testing.

  13 Jan 2008; Fernando J. Pereda <ferdy@gentoo.org>
  +files/git-1.5.3.8-t9101.patch, git-1.5.3.8.ebuild:
  Add a fix for some test cases under subversion 1.4.6

*git-1.5.3.8 (10 Jan 2008)

  10 Jan 2008; Fernando J. Pereda <ferdy@gentoo.org>
  +files/git-1.5.3.8-t9106.patch, -git-1.5.3.2.ebuild, -git-1.5.3.3.ebuild,
  -git-1.5.3.4.ebuild, -git-1.5.3.4-r1.ebuild, -git-1.5.3.5.ebuild,
  -git-1.5.3.6.ebuild, -git-1.5.3.6-r1.ebuild, -git-1.5.3.7.ebuild,
  +git-1.5.3.8.ebuild, -git-1.5.4_rc0.ebuild, -git-1.5.4_rc1.ebuild,
  git-1.5.4_rc2.ebuild:
  Version bump. Fix some bugs and style nits. Remove unneeded verbosity.
  Remove unused versions.

*git-1.5.4_rc2 (01 Jan 2008)

  01 Jan 2008; Markus Ullmann <jokey@gentoo.org> +git-1.5.4_rc2.ebuild:
  Version bump, granted by robbat2 as test-suite passes

  29 Dec 2007; <welp@gentoo.org> git-1.5.4_rc1.ebuild:
  Keyworded ~sparc-fbsd; bug 203655

  27 Dec 2007; Robin H. Johnson <robbat2@gentoo.org> git-1.5.3.7-r1.ebuild:
  Stable on amd64. Tested by myself and gentoofan23.

  25 Dec 2007; Raúl Porcel <armin76@gentoo.org> git-1.5.3.7-r1.ebuild:
  alpha/ia64/sparc/x86 stable wrt #202383

  25 Dec 2007; Brent Baude <ranger@gentoo.org> git-1.5.3.7-r1.ebuild:
  Marking git-1.5.3.7-r1 ppc64 for bug 203283

  25 Dec 2007; nixnut <nixnut@gentoo.org> ChangeLog:
  Stable on ppc wrt bug 203283

  25 Dec 2007; Robin H. Johnson <robbat2@gentoo.org> git-1.5.3.7-r1.ebuild,
  git-1.5.4_rc0.ebuild, git-1.5.4_rc1.ebuild:
  Bug 201544: Use the proper build mechanism to disable the Tk-using sections