@@ -12,17 +12,21 @@ DIST git-1.5.3.7.tar.bz2 1361540 RMD160 74bfccd50c895e22d10b9e25f481f00a20617077
 DIST git-1.5.3.8.tar.bz2 1363259 RMD160 8e35e67cc94152c681849e14cb4aec86f1b316cf SHA1 acca91988e674c5976e15a290be65f2775296162 SHA256 f98c6b900c9f3b87a1fbbe0c5f466e9d981cb9f1d193066b6d371df4b8066b77
 DIST git-1.5.4.rc2.tar.bz2 1550103 RMD160 96b857d72d10287366a634a63294caa336850c6d SHA1 7ccae071e31aa43a0ae3ed562664f2ef69312d93 SHA256 48f86c8be2f5315b7a178f74a0d01a120be5119eeeee465fd7ef60c1740d6014
 DIST git-1.5.4.rc3.tar.bz2 1565463 RMD160 b77c052cd08496c771325e5235972e0eb476ad49 SHA1 c72798b860aca4b07411dd6fbeb1d0a3ca16868a SHA256 15a834fd7818b71600e2dd3855a9e9924198c699daaf6db4e3e6ab514f7ae0c4
+DIST git-1.5.4.rc4.tar.bz2 1579434 RMD160 38fd4c2b745ae3e54bc15d3ff76fc4e2fbbf0c79 SHA1 6a2a337e3663bc3e7fd589cd15cce6ed314ba575 SHA256 65c6dfc83901dba3ee4f26318b40ab1bdba520d76a636b1597fea6900ee7b9ea
 DIST git-htmldocs-1.5.3.7.tar.bz2 549391 RMD160 18d01c803fd529ac897ae249ce4e05193ee9850a SHA1 926fb29604d69ce45ecf7b57d1b8feeb6c356f9b SHA256 e28c7e149e0f5adb66093af287dffe0caef83926ae08c6cdb6a2d35bc9148d04
 DIST git-htmldocs-1.5.3.8.tar.bz2 549444 RMD160 f4df777094158beea16bd2f0783ef846198e2c36 SHA1 d822887c45437daebf08c7cfe6e93a4ce5136fd3 SHA256 200a7231d6a594aeb5cb0c0e1cf25513c086f53b84170c7c5376199b2659b874
 DIST git-htmldocs-1.5.4.rc2.tar.bz2 603097 RMD160 b530069db8852d78a373c5eb1874ac189f624502 SHA1 ff76bc79172ef3bc2d4ade7f16389ca132f0e36c SHA256 03516a441af5f0881a1064e44acf3638a083a23c650b13ba24036facd5b8b712
 DIST git-htmldocs-1.5.4.rc3.tar.bz2 604712 RMD160 37f12f0972538088e050bd5d115e7fedcc5e65a1 SHA1 96014c1b972442ef4f9f8887014c084595f0ba86 SHA256 e3c1c62e2c27d0c25743f87e07ae8c022539e637323c666d96c5f6df23e37c7d
+DIST git-htmldocs-1.5.4.rc4.tar.bz2 608931 RMD160 f3b70e0d1db60e4918620f93393932fd12a13e37 SHA1 bca483c23863582ba33b179ac730cf85c64e50ed SHA256 b78848913ccb432d4510cfd8a57c5d22d704a7e99993638ce9dc67738baa39db
 DIST git-manpages-1.5.3.7.tar.bz2 147932 RMD160 fd4b45c221cbc63f580a32595c59eb52da1baa2f SHA1 7cc45f156298d0fbd4ead4a9b2096ed2143287b8 SHA256 870e68ef57f4175152b9b8decc721d8cbc9850ed8eda73919fc9e060f3968ffa
 DIST git-manpages-1.5.3.8.tar.bz2 147875 RMD160 c2a15b7a0742f14a70d0bf06d4d14fe9cf2b329b SHA1 15b9ece73c28897affb5da187835d19ff20e9962 SHA256 73a7cc2c0473694d454a6b7cb311ccdeb82f350bc8e652229d361592ea0a482f
 DIST git-manpages-1.5.4.rc2.tar.bz2 154985 RMD160 4c3d8eb5e907a56c6a3f6f8eafc247ab3201bd6e SHA1 42634edd7dbb66b060a10be7e2e51541575216d2 SHA256 6e4bcdb992c710ac2b6b698a68cca2ada050db85979fb31e59015c0718686c39
 DIST git-manpages-1.5.4.rc3.tar.bz2 155119 RMD160 f4df340f36e85f9144bc6a18f94692d07ed5c0a5 SHA1 adf52f9466f4cea604b68880d21d652800009377 SHA256 98e020ba2285c03403731548e15e31a08a91684de24a1a5058a97a17078e370c
-EBUILD git-1.5.3.7-r1.ebuild 6801 RMD160 7c1d0f55831a5cae8f196f87eabdc2d130fcb485 SHA1 17af11efcf462563cbab9aecbfe9bf382cd4f44f SHA256 ede376e341b12156924ef5a624395a27e2048e4615defad6641f1f867a089238
-EBUILD git-1.5.3.8.ebuild 6803 RMD160 f54851f7cfe7dba7364a1c70fb1621d042b2a4b4 SHA1 fdc999077906ac6b341f2eeeabb0b73ad55a3f02 SHA256 32ff236d4054f4ce3e4c1212c892d31f322210caa7b42fe2f827a66f6b7a9395
-EBUILD git-1.5.4_rc2.ebuild 6973 RMD160 e2d2b248c2b13be006f4df8920e682c35fe8252e SHA1 070ab31f5163757b7975e3b474234fdff6952326 SHA256 24123087d2e78153bc373cdd3a05b34966a1f8f9a2056b898ee7b32b75a7bd1e
-EBUILD git-1.5.4_rc3.ebuild 6975 RMD160 f1b9e640a9b1c5f34c9ad625b842bb0de4ef7b79 SHA1 32b458a7793a2edd2d96534928bb0d4898e780a5 SHA256 16618edb00bb7e55f7d4083de0c313a98ed7300be533d8ed4bc10edaf3618de4
-MISC ChangeLog 36671 RMD160 6e972d5bcfed501ba012fc773d006908a510ad29 SHA1 259848809f0c2d23e8f43126943e2ec3d81b8def SHA256 9812e767de41fe2302438e6a865f43043d648e21fe8030ecb29f2c45b691069b
+DIST git-manpages-1.5.4.rc4.tar.bz2 155937 RMD160 97f43cdfb356048589ba527ca1ae2402f4b86c85 SHA1 4bc08af8f3b9dcc02ff7eae515cddb38927639af SHA256 612317e4acda3e068c19014785ba03f95feabd10de325566f2cbf0e1886ee8ed
+EBUILD git-1.5.3.7-r1.ebuild 6844 RMD160 4a12ce8df771ed5c2fb923bf7617f27def9ffb79 SHA1 f9a9197a69a5571c4732e391d9b83aa5aaf50ab3 SHA256 c9992c417327abb4d31c0ad4e82ef79a27bd52baef06d59ba828a33e9c13a859
+EBUILD git-1.5.3.8.ebuild 6851 RMD160 3e624a0f7a456a0117b91090bd0d29584687e563 SHA1 21eae665af2fbbaafa992817648ce1ef1249d838 SHA256 3b05333711352cdda4fcdded2244249f25a22b2b6f15ead61bf12e3ea53d2348
+EBUILD git-1.5.4_rc2.ebuild 7021 RMD160 432ce6fa4592914968a312d3c6c10485f256e72b SHA1 dd3745a27a5490d84d6bc252adbb5afb51748f32 SHA256 43ba33ffcc1b99aec9e97ed6e72d5d9af8fddcb0b09d39d1cbfb44f9023f5fd2
+EBUILD git-1.5.4_rc3.ebuild 7021 RMD160 03bc436d819b224eb2122b9bca4073574cf06ee1 SHA1 1f14af9ea1ad9e1053c8b03aed59dfdbf3d7cd04 SHA256 5de0743fe87c45f19bfa77d7522ce923cbdf430ebd08f94d85018e19499c1735
+EBUILD git-1.5.4_rc4.ebuild 7021 RMD160 29bb7369a7a32640e2edacbaf3533ee95a07fa0a SHA1 5c9d91f33821d0182abaf4083c40e2e5b7271279 SHA256 c4c53cf66ce1238593395bbe8dbfad1593eddf18528e458fc1a125bee6ee5968
+MISC ChangeLog 37022 RMD160 921b5ca137861fff59d2c17b7c510fbf8161442c SHA1 ebd8408e0a6a935dedaa91b491ac3f8ba64b5956 SHA256 92a8c927c510a16d31611a09aa75fe2f1646b162226101f8285f71b3fb451cdd
 MISC metadata.xml 1029 RMD160 f44ab0f6f9566b2cdb37f6cdd094e163c94e7d11 SHA1 88453257ccbedf4166357c262f49b0731cc45448 SHA256 2aa15da3001de8d8182ee9c8289cdefae84652b78ccc4cf35b2394f07edc352f
