@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/git/git-1.5.4_rc3.ebuild,v 1.2 2008/02/01 10:46:40 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/git/git-1.5.4_rc4.ebuild,v 1.2 2008/02/01 10:46:40 robbat2 Exp $
 
 EAPI="prefix"
 
