@@ -1,6 +1,16 @@
 # ChangeLog for dev-util/git
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.251 2008/01/14 20:15:33 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.253 2008/02/01 10:46:40 robbat2 Exp $
+
+  01 Feb 2008; Robin H. Johnson <robbat2@gentoo.org> git-1.5.2.5.ebuild,
+  git-1.5.3.7-r1.ebuild, git-1.5.3.8.ebuild, git-1.5.4_rc2.ebuild,
+  git-1.5.4_rc3.ebuild, git-1.5.4_rc4.ebuild:
+  Clarify the extra deps for git-svnimport.
+
+*git-1.5.4_rc4 (01 Feb 2008)
+
+  01 Feb 2008; Robin H. Johnson <robbat2@gentoo.org> +git-1.5.4_rc4.ebuild:
+  Version bump.
 
   14 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
   git-1.5.3.7-r1.ebuild:
